Allow wrapping in issue list button text

--- a/css/custom.css
+++ b/css/custom.css
@@ -90,3 +90,7 @@ body {
   height: auto;
   overflow: visible;
 }
+
+.issue-list-btn {
+  white-space: normal;
+}
